# otbExternalModuleTemplate

./: README  cookiecutter.json
{{cookiecutter.module_name}}/: {{cookiecutter.module_name}}.remote.cmake
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: CMakeLists.txt  otb-module.cmake
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/: CMakeLists.txt  otb{{cookiecutter.application_name[0].upper() + cookiecutter.application_name[1:]}}App.cxx
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/src/: otb{{cookiecutter.source_filename[0].upper() + cookiecutter.source_filename[1:]}}.cxx
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/test/: CMakeLists.txt  otb{{cookiecutter.module_name[0].upper() + cookiecutter.module_name[1:]}}Test.cxx  otb{{cookiecutter.module_name[0].upper() + cookiecutter.module_name[1:]}}TestDriver.cxx
